=== Safari-108 ===

2003-10-02  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3441656 -- constructor bad for objs created w/ function as prototype (www.moock.org/asdg/codedepot)

        * kjs/nodes.cpp: (FuncDeclNode::processFuncDecl): Set up the constructor as
        as specified in the JavaScript spec. We were already doing this right in the
        other place we make functions.

2003-09-30  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        Rolled in Harri Porten's change to accept non-breaking space in JavaScript.

        * kjs/lexer.cpp: (Lexer::isWhiteSpace): Accept 00A0 as "whitespace".

2003-09-25  Maciej Stachowiak  <mjs@apple.com>

	Roll out build system change since it did not actually work. :-(
	
        * JavaScriptCore.pbproj/project.pbxproj:
        * Makefile.am:

2003-09-25  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        * JavaScriptCore.pbproj/project.pbxproj: Don't hack install name. Instead
	of embedding into Safari, embed into WebKit as sub-umbrella.
        * Makefile.am: Don't forget to rebuild if the user removes
	JavaScript.framework from symroots manually.

=== Safari-107 ===

2003-09-24  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3421107 -- some dates that other browsers can parse can't be parsed by KJS's Date.parse()

        * kjs/date_object.cpp: (KJS::KRFCDate_parseDate): Added code to be more strict about month names,
        to allow a time zone after date even if the date omits the time, and to understand AM and PM.

2003-09-22  Darin Adler  <darin@apple.com>

        * JavaScriptCore.pbproj/project.pbxproj: Rename Mixed build style to OptimizedWithSymbols.

2003-09-22  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        * kjs/config.h: Added HAVE_SYS_PARAM_H, since KJS does look for this header, and we do
        indeed have it. Just something I noticed in passing while cleaning up configure.in.
